<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_settings_title">
        <ListPreference
            android:dialogTitle="@string/language_pref_dialog_title"
            android:entries="@array/languages"
            android:entryValues="@array/language_codes"
            android:key="language_preference"
            android:summary="@string/language_pref_summary"
            android:title="@string/language_pref_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="dark_theme_preference"
            android:summary="@string/dark_theme_pref_summary"
            android:title="@string/dark_theme_pref_title" />
    </PreferenceCategory>

</PreferenceScreen>