<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pill_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pill_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pill_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/accent"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            cardview:layout_constraintTop_toBottomOf="@+id/card_view_pill_photo"
            android:layout_marginLeft="16dp"
            cardview:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/pill_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pill_description"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginTop="8dp"
            cardview:layout_constraintTop_toBottomOf="@+id/pill_name"
            android:layout_marginLeft="16dp"
            cardview:layout_constraintLeft_toLeftOf="parent"
            cardview:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            cardview:layout_constraintVertical_bias="0.0"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/pill_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pill_id"
            android:textAppearance="?android:textAppearanceSmall"
            cardview:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            cardview:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/pill_actions_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/ellipsis_vertical"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            android:layout_marginRight="8dp"
            cardview:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            cardview:layout_constraintTop_toBottomOf="@+id/card_view_pill_photo"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/card_view_pill_photo"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            cardview:layout_constraintHorizontal_bias="0.0"
            cardview:layout_constraintLeft_toLeftOf="parent"
            cardview:layout_constraintRight_toRightOf="parent"
            cardview:layout_constraintTop_toTopOf="parent"
            cardview:srcCompat="@mipmap/ic_launcher" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>